-Sale, og tags - Sale 30% identita - Og tags face , viber ,...

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!--  sharing -->
+  <meta property="og:type"
+        content="website" />
+  <meta property="og:title"
+        content="La Pista | POSETI NAS I IZRAZI SVOJ IDENTITET"/>
+  <meta property="og:description"
+        content="Naš cilj je da želje skrivene u srcu svake žene pretvorimo u stvarnost,a to je ono što svaku od naših cipela cini jedinstvenim stilskim iskustvom."/>
+  <meta property="og:image"
+        content="https://lapista.rs/assets/img/lapista-logo.jpg"/>
+  <meta property="og:url" content="www.lapista.rs/" />
+  <meta property="og:site_name"
+        content="La Pista"/>
 </head>
 <body>
   <app-root></app-root>
