--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,34 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>La Pista</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- font -->
-<!--  <link rel="preconnect" href="https://fonts.gstatic.com">-->
-<!--  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">-->
-<!--  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">-->
-<!--  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
-<!--  new font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;700&display=swap" rel="stylesheet">
-<!--  sharing -->
-  <meta property="og:type"
-        content="website" />
-  <meta property="og:title"
-        content="La Pista | POSETI NAS I IZRAZI SVOJ IDENTITET"/>
-  <meta property="og:description"
-        content="Naš cilj je da želje skrivene u srcu svake žene pretvorimo u stvarnost,a to je ono što svaku od naših cipela cini jedinstvenim stilskim iskustvom."/>
-  <meta property="og:image"
-        content="https://lapista.rs/assets/img/lapista-logo.jpg"/>
-  <meta property="og:url" content="www.lapista.rs/" />
-  <meta property="og:site_name"
-        content="La Pista"/>
+    <meta charset="utf-8">
+    <title>La Pista Web prodavnica</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- font za MATERIAL -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--  new font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <!--  sharing -->
+    <meta property="og:type"
+          content="website"/>
+    <meta property="og:title"
+          content="La Pista | POSETI NAS I IZRAZI SVOJ IDENTITET"/>
+    <meta property="og:description"
+          content="Naš cilj je da želje skrivene u srcu svake žene pretvorimo u stvarnost,a to je ono što svaku od naših cipela cini jedinstvenim stilskim iskustvom."/>
+    <meta property="og:image"
+          content="https://lapista.rs/assets/img/lapista-logo.jpg"/>
+    <meta property="og:url" content="www.lapista.rs/"/>
+    <meta property="og:site_name"
+          content="La Pista"/>
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
