-Font fix, Slider style fix

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <!--  sharing -->
+
+    <!--TODO: FIX imports remove excess-->
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;600&display=swap" rel="stylesheet">
+    <!--  SHARING -->
     <meta property="og:type"
           content="website"/>
     <meta property="og:title"
@@ -27,6 +30,7 @@
     <meta property="og:url" content="www.lapista.rs/"/>
     <meta property="og:site_name"
           content="La Pista"/>
+    <!--  END SHARING -->
 </head>
 <body>
 <app-root></app-root>
