--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>La Pista Web prodavnica</title>
+    <title>La Pista Web prodavnica,Zenska obuca Novi Beograd</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="La Pista zenska obuca novi beograd,zenske cipele,Belville,metro obuca">
+    <meta name=”robots” content="index, follow">
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- font za MATERIAL -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
